[UPD] Added header

--- a/index.html
+++ b/index.html
@@ -11,8 +11,29 @@
     <title>Bootstrap</title>
 </head>
 
-<body>
+<body class="debug">
+    <!-- HEADER -->
+    <header>
+        <div class="container">
+            <div class="row text-white py-4">
+                <div class="col">START BOOTSTRAP</div>
+                <div class="col text-end">
+                    <div class="d-md-none">MENU</div>
+                    <div class="d-none d-md-block"> LIST</div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- MAIN -->
+    <main>
+        <!-- JUMBOTRON -->
 
+
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
