--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
     <!-- MAIN -->
     <main>
         <!-- JUMBOTRON -->
-
+        <section id="jumbo" class="h-300px">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h1>START BOOTSTRAP</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
     </main>
