[UPD] Added portfolio section

--- a/index.html
+++ b/index.html
@@ -36,9 +36,49 @@
                 </div>
             </div>
         </section>
-
+        <!-- PORTFOLIO -->
+        <section id="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="text-container text-center">
+                        <h2>PORTFOLIO</h2>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 gap-2">
+                        <div class="card h-100px">
+                            1
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card h-100px">
+                            2
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card h-100px">
+                            3
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card h-100px">
+                            4
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card h-100px">
+                            5
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card h-100px">
+                            6
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
+    <!-- FOOTER -->
     <footer>
 
     </footer>
