[UPD] Added about section

--- a/index.html
+++ b/index.html
@@ -43,39 +43,68 @@
                     <div class="text-container text-center">
                         <h2>PORTFOLIO</h2>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 gap-2">
-                        <div class="card h-100px">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card h-100px text-center mb-4 bg-pic1">
                             1
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px">
+                        <div class="card h-100px text-center mb-4 bg-pic2">
                             2
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px">
+                        <div class="card h-100px text-center mb-4 bg-pic3">
                             3
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px">
+                        <div class="card h-100px text-center mb-4 bg-pic4">
                             4
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px">
+                        <div class="card h-100px text-center mb-4 bg-pic5">
                             5
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px">
+                        <div class="card h-100px text-center mb-4 bg-pic6">
                             6
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- ABOUT -->
+        <section id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h2>ABOUT</h2>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, labore voluptates magni
+                            fugiat atque deleniti, nulla iste iusto dolores vel, id earum tempora officia eaque ullam at
+                            molestias architecto perspiciatis.
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis explicabo consequatur
+                            necessitatibus aperiam laudantium placeat dolor minus laborum eius soluta error quam
+                            officia, ab mollitia. Nostrum magni fuga voluptatibus quae.
+                        </p>
+                    </div>
+                    <div class="col-12 text-center">
+                        DOWNLOAD
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 
     </main>
     <!-- FOOTER -->
