--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- MAIN -->
     <main>
         <!-- JUMBOTRON -->
-        <section id="jumbo" class="h-300px">
+        <section id="jumbo" class="py-4 h-300px">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -37,7 +37,7 @@
             </div>
         </section>
         <!-- PORTFOLIO -->
-        <section id="portfolio">
+        <section id="portfolio" class="py-4">
             <div class="container">
                 <div class="row">
                     <div class="text-container text-center">
@@ -77,7 +77,7 @@
             </div>
         </section>
         <!-- ABOUT -->
-        <section id="about">
+        <section id="about" class="py-4">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -103,7 +103,21 @@
                 </div>
             </div>
         </section>
+        <!-- CONTACT ME -->
+        <section id="contact" class="py-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h2>CONTACT ME</h2>
+                    </div>
+                    <div class="col-12">
+                        <div class="content bg-pic1 h-300px">
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
     </main>
