--- a/index.html
+++ b/index.html
@@ -118,12 +118,27 @@
                 </div>
             </div>
         </section>
-
-
     </main>
     <!-- FOOTER -->
     <footer>
-
+        <section id="footer-top" class="bg-footer-top h-300px">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-4 text-center text-white">
+                        LOCATION
+                    </div>
+                    <div class="col-12 col-md-4 text-center text-white">
+                        AROUND THE WEB
+                    </div>
+                    <div class="col-12 col-md-4 text-center text-white">
+                        ABOUT FREELANCER
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="footer-bottom" class="bg-footer-bottom h-100px text-center text-white">
+            <p>COPYRIGHT</p>
+        </section>
     </footer>
 </body>
 
