--- a/index.html
+++ b/index.html
@@ -16,10 +16,20 @@
     <header>
         <div class="container">
             <div class="row text-white py-4">
-                <div class="col">START BOOTSTRAP</div>
+                <div class="col align-middle">
+                    <h3 class="d-inline fw-bold text-uppercase">Start Bootstrap</h3>
+                </div>
                 <div class="col text-end">
-                    <div class="d-md-none">MENU</div>
-                    <div class="d-none d-md-block"> LIST</div>
+                    <div class="d-md-none">
+                        <i class="fas fa-bars"></i>
+                    </div>
+                    <div class="d-none d-md-block">
+                        <ul class="d-flex align-middle justify-content-end">
+                            <li class="ps-4 text-uppercase">Portfolio</li>
+                            <li class="ps-4 text-uppercase">About</li>
+                            <li class="ps-4 text-uppercase">Contact</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
