[UPD] Added Jumbo style

--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
     <!-- MAIN -->
     <main>
         <!-- JUMBOTRON -->
-        <section id="jumbo" class="py-4 h-300px">
+        <section id="jumbo" class="py-4">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h1>START BOOTSTRAP</h1>
+                        <img class="w-50" src="./img/avatar.svg" alt="avatar">
+                        <h1 class="text-white fw-bold my-3 text-uppercase">Start Bootstrap</h1>
+                        <i class="fs-2 text-white fas fa-star"></i>
+                        <h6 class="fw-semibold text-white text-uppercase my-3">Graphic Artist - Web Designer -
+                            Illustrator
+                        </h6>
                     </div>
                 </div>
             </div>
