--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <img class="w-50" src="./img/avatar.svg" alt="avatar">
+                        <img src="./img/avatar.svg" alt="avatar">
                         <h1 class="text-white fw-bold my-3 text-uppercase">Start Bootstrap</h1>
                         <i class="fs-2 text-white fas fa-star"></i>
                         <h6 class="fw-semibold text-white text-uppercase my-3">Graphic Artist - Web Designer -
@@ -56,36 +56,49 @@
             <div class="container">
                 <div class="row">
                     <div class="text-container text-center">
-                        <h2>PORTFOLIO</h2>
+                        <h2 class="fw-semibold mb-0 fs-3">PORTFOLIO</h2>
+                        <i class="fs-2 my-4 fas fa-star"></i>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px text-center mb-4 bg-pic1">
-                            1
+                        <div class="card text-center mb-4 bg-pic1 justify-content-center">
+                            <div class="content-image">
+                                <img class="mw-100" src="img/cabin.png" alt="cabin">
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px text-center mb-4 bg-pic2">
-                            2
+                        <div class="card text-center mb-4 bg-pic2 justify-content-center">
+                            <div class="content-image">
+                                <img class="mw-100" src="img/cake.png" alt="cake">
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px text-center mb-4 bg-pic3">
-                            3
+                        <div class="card text-center mb-4 bg-pic3 justify-content-center">
+                            <div class="content-image">
+                                <img class="mw-100" src="img/circus.png" alt="circus">
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px text-center mb-4 bg-pic4">
-                            4
+                        <div class="card text-center mb-4 bg-pic4 justify-content-center">
+                            <div class="content-image">
+                                <img class="mw-100" src="img/game.png" alt="game">
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px text-center mb-4 bg-pic5">
-                            5
+                        <div class="card text-center mb-4 bg-pic5 justify-content-center">
+                            <div class="content-image">
+                                <img class="mw-100" src="img/safe.png" alt="safe">
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card h-100px text-center mb-4 bg-pic6">
-                            6
+                        <div class="card text-center mb-4 bg-pic6 justify-content-center">
+                            <div class="content-image">
+                                <img class="mw-100" src="img/submarine.png" alt="submarine">
+                            </div>
                         </div>
                     </div>
                 </div>
