[UPD] Added About style

--- a/index.html
+++ b/index.html
@@ -106,29 +106,42 @@
         </section>
         <!-- ABOUT -->
         <section id="about" class="py-4">
-            <div class="container">
-                <div class="row">
+            <div class="container-text">
+                <div class="row justify-content-center">
                     <div class="col-12 text-center">
-                        <h2>ABOUT</h2>
+                        <h2 class="text-white mb-0 fw-semibold">ABOUT</h2>
+                        <i class="fs-2 my-4 text-white fas fa-star"></i>
                     </div>
                     <div class="col-12 col-md-6">
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, labore voluptates magni
-                            fugiat atque deleniti, nulla iste iusto dolores vel, id earum tempora officia eaque ullam at
-                            molestias architecto perspiciatis.
+                            Freelancer is a free bootstrap
+                            theme created by Start Bootstrap.
+                            The download includes the
+                            complete source files including
+                            HTML, CSS, and JavaScript as
+                            well as optional LESS stylesheets
+                            for easy customization.
                         </p>
                     </div>
                     <div class="col-12 col-md-6">
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis explicabo consequatur
-                            necessitatibus aperiam laudantium placeat dolor minus laborum eius soluta error quam
-                            officia, ab mollitia. Nostrum magni fuga voluptatibus quae.
+                            Whether you're a student looking
+                            to showcase your work, a
+                            professional looking to attract
+                            clients, or a graphic artist looking
+                            to share your projects, this
+                            template is the perfect starting
+                            point!
                         </p>
-                    </div>
-                    <div class="col-12 text-center">
-                        DOWNLOAD
                     </div>
                 </div>
+                <div class="col-12 text-center">
+                    <div class="btn text-white border-white">
+                        <i class="fas fa-download"></i>
+                        <span class="fs-6 fw-semibold">Download</span>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
         <!-- CONTACT ME -->
