[UPD] Added top footer style

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container">
                 <div class="row">
                     <div class="text-container text-center">
-                        <h2 class="fw-semibold mb-0 fs-3">PORTFOLIO</h2>
+                        <h2 class="fw-semibold mb-0 fs-3 text-uppercase">Portfolio</h2>
                         <i class="fs-2 my-4 fas fa-star"></i>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
@@ -109,7 +109,7 @@
             <div class="container-text">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
-                        <h2 class="text-white mb-0 fw-semibold">ABOUT</h2>
+                        <h2 class="text-white mb-0 fw-semibold text-uppercase">About</h2>
                         <i class="fs-2 my-4 text-white fas fa-star"></i>
                     </div>
                     <div class="col-12 col-md-6">
@@ -165,14 +165,33 @@
         <section id="footer-top" class="bg-footer-top h-300px">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-4 text-center text-white">
-                        LOCATION
+                    <div class="col-12 col-md-4 text-center text-white pt-5 px-0">
+                        <h5 class="text-white mb-0 fw-semibold text-uppercase">Location</h5>
+                        <p class="text-white mb-0 fw-semibold">2215 John Daniel Drive Clark, MO 54243</p>
                     </div>
-                    <div class="col-12 col-md-4 text-center text-white">
-                        AROUND THE WEB
+                    <div class="col-12 col-md-4 text-center text-white pt-5">
+                        <h5 class="mb-0 fw-semibold text-uppercase">Around the web</h5>
+                        <div class="d-flex justify-content-center">
+                            <div>
+                                <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-facebook-f"></i>
+                            </div>
+                            <div>
+                                <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-twitter"></i>
+                            </div>
+                            <div>
+                                <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-linkedin-in"></i>
+                            </div>
+                            <div>
+                                <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-google-plus-g"></i>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-4 text-center text-white">
-                        ABOUT FREELANCER
+                    <div class="col-12 col-md-4 text-center text-white pt-5 px-0">
+                        <h5 class="text-white mb-0 fw-semibold text-uppercase pb-2">About Freelancer</h5>
+                        <p class="fs-6 text-white mb-0 fw-semibold pb-5 mb-4">
+                            Freelance is a free to use, open source Bootstrap theme created by
+                            <a class="text-aqua-green text-decoration-none" href="">Start Bootstrap</a>.
+                        </p>
                     </div>
                 </div>
             </div>
