[FIX] Changed brakepoints for cols and removed fixed hight from footer

--- a/index.html
+++ b/index.html
@@ -59,42 +59,42 @@
                         <h2 class="fw-semibold mb-0 fs-3 text-uppercase">Portfolio</h2>
                         <i class="fs-2 my-4 fas fa-star"></i>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-lg-6 col-xl-4">
                         <div class="card text-center mb-4 bg-pic1 justify-content-center">
                             <div class="content-image">
                                 <img class="mw-100" src="img/cabin.png" alt="cabin">
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-lg-6 col-xl-4">
                         <div class="card text-center mb-4 bg-pic2 justify-content-center">
                             <div class="content-image">
                                 <img class="mw-100" src="img/cake.png" alt="cake">
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-lg-6 col-xl-4">
                         <div class="card text-center mb-4 bg-pic3 justify-content-center">
                             <div class="content-image">
                                 <img class="mw-100" src="img/circus.png" alt="circus">
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-lg-6 col-xl-4">
                         <div class="card text-center mb-4 bg-pic4 justify-content-center">
                             <div class="content-image">
                                 <img class="mw-100" src="img/game.png" alt="game">
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-lg-6 col-xl-4">
                         <div class="card text-center mb-4 bg-pic5 justify-content-center">
                             <div class="content-image">
                                 <img class="mw-100" src="img/safe.png" alt="safe">
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-lg-6 col-xl-4">
                         <div class="card text-center mb-4 bg-pic6 justify-content-center">
                             <div class="content-image">
                                 <img class="mw-100" src="img/submarine.png" alt="submarine">
@@ -112,7 +112,7 @@
                         <h2 class="text-white mb-0 fw-semibold text-uppercase">About</h2>
                         <i class="fs-2 my-4 text-white fas fa-star"></i>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-lg-6">
                         <p>
                             Freelancer is a free bootstrap
                             theme created by Start Bootstrap.
@@ -123,7 +123,7 @@
                             for easy customization.
                         </p>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-lg-6">
                         <p>
                             Whether you're a student looking
                             to showcase your work, a
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="col-12 text-center">
-                    <div class="btn text-white border-white">
+                    <div class="btn text-white border-white m-3">
                         <i class="fas fa-download"></i>
                         <span class="fs-6 fw-semibold">Download</span>
                     </div>
@@ -162,7 +162,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <section id="footer-top" class="bg-footer-top h-300px">
+        <section id="footer-top" class="bg-footer-top">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-4 text-center text-white pt-5 px-0">
@@ -196,8 +196,8 @@
                 </div>
             </div>
         </section>
-        <section id="footer-bottom" class="bg-footer-bottom h-100px text-center text-white">
-            <p>COPYRIGHT</p>
+        <section id="footer-bottom" class="bg-footer-bottom text-center text-white">
+            <p class="py-5">Copyright &#169; Your website 2019</p>
         </section>
     </footer>
 </body>
