[FIX] Removed margin bottom to last p to remove white final space

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </div>
         </section>
         <section id="footer-bottom" class="bg-footer-bottom text-center text-white">
-            <p class="py-5">Copyright &#169; Your website 2019</p>
+            <p class="py-5 mb-0">Copyright &#169; Your website 2019</p>
         </section>
     </footer>
 </body>
