--- a/index.html
+++ b/index.html
@@ -15,7 +15,31 @@
     <!-- HEADER -->
     <header>
         <div class="container">
-            <div class="row text-white py-4">
+            <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-uppercase fw-bold" href="#">Start Bootstrap</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active text-uppercase" href="#">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active text-uppercase" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active text-uppercase">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+            <!-- ----- OLD NAVBAR ----- -->
+            <!-- <div class="row text-white py-4">
                 <div class="col align-middle">
                     <h3 class="d-inline fw-bold text-uppercase">Start Bootstrap</h3>
                 </div>
@@ -31,7 +55,8 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
+
         </div>
     </header>
     <!-- MAIN -->
@@ -164,34 +189,41 @@
     <footer>
         <section id="footer-top" class="bg-footer-top">
             <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-4 text-center text-white pt-5 px-0">
-                        <h5 class="text-white mb-0 fw-semibold text-uppercase">Location</h5>
-                        <p class="text-white mb-0 fw-semibold">2215 John Daniel Drive Clark, MO 54243</p>
+                <div class="row align-items-center">
+                    <div class="col-12 col-lg-4 text-center text-white pt-5 px-0">
+                        <div class="content-text">
+                            <h5 class="text-white mb-0 fw-semibold text-uppercase">Location</h5>
+                            <p class="text-white mb-0 fw-semibold">2215 John Daniel Drive Clark, MO 54243</p>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-4 text-center text-white pt-5">
-                        <h5 class="mb-0 fw-semibold text-uppercase">Around the web</h5>
-                        <div class="d-flex justify-content-center">
-                            <div>
-                                <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-facebook-f"></i>
-                            </div>
-                            <div>
-                                <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-twitter"></i>
-                            </div>
-                            <div>
-                                <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-linkedin-in"></i>
-                            </div>
-                            <div>
-                                <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-google-plus-g"></i>
+                    <div class="col-12 col-lg-4 text-center text-white pt-5">
+                        <div class="content-text">
+                            <h5 class="mb-0 fw-semibold text-uppercase">Around the web</h5>
+                            <div class="d-flex justify-content-center">
+                                <div>
+                                    <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-facebook-f"></i>
+                                </div>
+                                <div>
+                                    <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-twitter"></i>
+                                </div>
+                                <div>
+                                    <i class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-linkedin-in"></i>
+                                </div>
+                                <div>
+                                    <i
+                                        class="content-icon border rounded-circle p-3 mx-1 my-2 fab fa-google-plus-g"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 text-center text-white pt-5 px-0">
-                        <h5 class="text-white mb-0 fw-semibold text-uppercase pb-2">About Freelancer</h5>
-                        <p class="fs-6 text-white mb-0 fw-semibold pb-5 mb-4">
-                            Freelance is a free to use, open source Bootstrap theme created by
-                            <a class="text-aqua-green text-decoration-none" href="">Start Bootstrap</a>.
-                        </p>
+                    <div class="col-12 col-lg-4 text-center text-white pt-5 px-0">
+                        <div class="content-text">
+                            <h5 class="text-white mb-0 fw-semibold text-uppercase pb-2">About Freelancer</h5>
+                            <p class="fs-6 text-white mb-0 fw-semibold pb-5 mb-4">
+                                Freelance is a free to use, open source Bootstrap theme created by
+                                <a class="text-aqua-green text-decoration-none" href="">Start Bootstrap</a>.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -200,6 +232,11 @@
             <p class="py-5 mb-0">Copyright &#169; Your website 2019</p>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </body>
 
 </html>
