--- a/index.html
+++ b/index.html
@@ -171,13 +171,34 @@
         </section>
         <!-- CONTACT ME -->
         <section id="contact" class="py-4">
-            <div class="container">
+            <div class="container-text">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h2>CONTACT ME</h2>
+                        <h2 class="mb-0 fw-semibold text-uppercase">Contact Me</h2>
+                        <i class="fs-2 my-4 fas fa-star"></i>
                     </div>
                     <div class="col-12">
-                        <div class="content bg-pic1 h-300px">
+                        <div class="content">
+                            <form>
+                                <div class="mb-3">
+                                    <input type="name" class="w-100 border-0 border-bottom rounded-0 fw-semibold fs-5"
+                                        id="Name" placeholder="Name">
+                                </div>
+                                <div class="mb-3">
+                                    <input type="email" class="w-100 border-0 border-bottom rounded-0 fw-semibold fs-5"
+                                        id="EmailAddress" placeholder="Email Address">
+                                </div>
+                                <div class="mb-3">
+                                    <input type="text" class="w-100 border-0 border-bottom rounded-0 fw-semibold fs-5"
+                                        id="PhoneNumber" placeholder="Phone Number">
+                                </div>
+                                <div class="mb-3">
+                                    <textarea class="w-100 border-0 border-bottom rounded-0 fw-semibold fs-5"
+                                        id="FormControlTextarea" rows="6" placeholder="Message"></textarea>
+                                </div>
+                                <button type="submit"
+                                    class="btn btn-primary bg-aqua-green border-0 fw-semibold fs-5 px-3">Send</button>
+                            </form>
 
                         </div>
                     </div>
