[BONUS] Created separator component

--- a/index.html
+++ b/index.html
@@ -68,7 +68,16 @@
                     <div class="col-12 text-center">
                         <img src="./img/avatar.svg" alt="avatar">
                         <h1 class="text-white fw-bold my-3 text-uppercase">Start Bootstrap</h1>
-                        <i class="fs-2 text-white fas fa-star"></i>
+                        <!-- separator -->
+                        <div class="mc-separator" style="--mc-separator-color:white;">
+                            <div class="w-100">
+                                <hr class="line">
+                            </div>
+                            <i class="fs-2 px-3 fas fa-star"></i>
+                            <div class="w-100">
+                                <hr class="line">
+                            </div>
+                        </div>
                         <h6 class="fw-semibold text-white text-uppercase my-3">Graphic Artist - Web Designer -
                             Illustrator
                         </h6>
@@ -82,7 +91,16 @@
                 <div class="row">
                     <div class="text-container text-center">
                         <h2 class="fw-semibold mb-0 fs-3 text-uppercase">Portfolio</h2>
-                        <i class="fs-2 my-4 fas fa-star"></i>
+                        <!-- separator -->
+                        <div class="mc-separator">
+                            <div class="w-100">
+                                <hr class="line">
+                            </div>
+                            <i class="fs-2 px-3 fas fa-star"></i>
+                            <div class="w-100">
+                                <hr class="line">
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-lg-6 col-xl-4">
                         <div class="card text-center mb-4 bg-pic1 justify-content-center">
@@ -210,11 +228,11 @@
     <footer>
         <section id="footer-top" class="bg-footer-top">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row">
                     <div class="col-12 col-lg-4 text-center text-white pt-5 px-0">
                         <div class="content-text">
                             <h5 class="text-white mb-0 fw-semibold text-uppercase">Location</h5>
-                            <p class="text-white mb-0 fw-semibold">2215 John Daniel Drive Clark, MO 54243</p>
+                            <p class="text-white mb-0 fw-semibold fs-5">2215 John Daniel Drive Clark, MO 54243</p>
                         </div>
                     </div>
                     <div class="col-12 col-lg-4 text-center text-white pt-5">
@@ -240,7 +258,7 @@
                     <div class="col-12 col-lg-4 text-center text-white pt-5 px-0">
                         <div class="content-text">
                             <h5 class="text-white mb-0 fw-semibold text-uppercase pb-2">About Freelancer</h5>
-                            <p class="fs-6 text-white mb-0 fw-semibold pb-5 mb-4">
+                            <p class="fs-5 text-white mb-0 fw-semibold pb-5 mb-4">
                                 Freelance is a free to use, open source Bootstrap theme created by
                                 <a class="text-aqua-green text-decoration-none" href="">Start Bootstrap</a>.
                             </p>
