--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <div class="container">
                 <div class="row">
                     <div class="text-container text-center">
-                        <h2 class="fw-semibold mb-0 fs-3 text-uppercase">Portfolio</h2>
+                        <h2 class="fw-semibold my-4 text-uppercase">Portfolio</h2>
                         <!-- separator -->
-                        <div class="mc-separator">
+                        <div class="mc-separator mb-4">
                             <div class="w-100">
                                 <hr class="line">
                             </div>
@@ -152,8 +152,17 @@
             <div class="container-text">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
-                        <h2 class="text-white mb-0 fw-semibold text-uppercase">About</h2>
-                        <i class="fs-2 my-4 text-white fas fa-star"></i>
+                        <h2 class="text-white my-4 fw-semibold text-uppercase">About</h2>
+                        <!-- separator -->
+                        <div class="mc-separator mb-4" style="--mc-separator-color:white;">
+                            <div class="w-100">
+                                <hr class="line">
+                            </div>
+                            <i class="fs-2 px-3 fas fa-star"></i>
+                            <div class="w-100">
+                                <hr class="line">
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-lg-6">
                         <p>
@@ -192,8 +201,17 @@
             <div class="container-text">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h2 class="mb-0 fw-semibold text-uppercase">Contact Me</h2>
-                        <i class="fs-2 my-4 fas fa-star"></i>
+                        <h2 class="my-4 fw-semibold text-uppercase">Contact Me</h2>
+                        <!-- separator -->
+                        <div class="mc-separator mb-4">
+                            <div class="w-100">
+                                <hr class="line">
+                            </div>
+                            <i class="fs-2 px-3 fas fa-star"></i>
+                            <div class="w-100">
+                                <hr class="line">
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12">
                         <div class="content">
