[FIX] Fixed separator width for About and Contact me section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="col-12 text-center">
                         <h2 class="text-white my-4 fw-semibold text-uppercase">About</h2>
                         <!-- separator -->
-                        <div class="mc-separator mb-4" style="--mc-separator-color:white;">
+                        <div class="mc-separator mb-4" style="--mc-separator-color:white; --mc-separator-width:30%;">
                             <div class="w-100">
                                 <hr class="line">
                             </div>
@@ -203,7 +203,7 @@
                     <div class="col-12 text-center">
                         <h2 class="my-4 fw-semibold text-uppercase">Contact Me</h2>
                         <!-- separator -->
-                        <div class="mc-separator mb-4">
+                        <div class="mc-separator mb-4" style="--mc-separator-width:30%;">
                             <div class="w-100">
                                 <hr class="line">
                             </div>
